--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -15,7 +15,7 @@ jobs:
         uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: ${{ secrets.GIT_TOKEN }}
-          automatic_release_tag: "v${{ github.event.release.tag_name }}"
+          automatic_release_tag: "v${{ steps.package_version.outputs.version }}"
           prerelease: false
           files: ./*
           
